syntax = "proto3";

package grpc.ipasn.lookup;

message IpQuery {
  string ip = 1;
}

message IpResponse {
  string network = 1;
  string country = 2;
  string country_code = 3;
  string continent = 4;
  string continent_code = 5;
  uint32 asn = 6;
  string as_name = 7;
  string as_domain = 8;
  repeated string as_tags = 9; 
}

message IpResult {
  string ip = 1;
  optional IpResponse response = 2;
  bool invalid = 3;
  bool bogon = 4;
}

service Lookup {
  rpc LookupSingle(IpQuery) returns (IpResult) {}
  rpc LookupMany(stream IpQuery) returns (stream IpResult) {}
}
